--- a/views/pages/project.ejs
+++ b/views/pages/project.ejs
@@ -6,18 +6,29 @@
     </head>
     <body>
         <div class="flex flex-col items-center space-y-2 ">
-            <h1 class="text-blue-400 my-12"><%= project.name %></h1>
+            <div class="flex flex-col items-center my-12">
+                <h1 class="text-indigo-400"><%= project.name %></h1>
+                <% if(project.github && project.liveapp) { %>
+                    <h3 class="text-indigo-400"><a href="<%= project.github %>">GitHub</a> | <a href="<%= project.liveapp %>">Live App</a></h3>
+                <% } else if (project.github) { %>
+                    <h3 class="text-indigo-400"><a href="<%= project.github %>">GitHub</a> | 
+                <% } else if (project.liveapp) { %>
+                    <h3><a href="<%= project.liveapp %>">Live App</a></h3>
+                <% } %>
+
+                <h3 class="text-indigo-400">
+            </div>
             <div class="m-16 flex flex-col justify-items-start w-4/5 space-y-4">
                 
-                <h2 class="text-blue-400">Description</h2>
-                <p class="py-1"><% project.paragraphs.forEach(function(paragraph, idx) { %>
-                    <%= paragraph %>
-                <% }) %></p>
+                <h2 class="text-indigo-400">Description</h2>
+                <% project.paragraphs.forEach(function(paragraph, idx) { %>
+                    <p class="py-1"><%= paragraph %></p>
+                <% }) %>
 
-                <h2 class="text-blue-400">Technologies</h2>
+                <h2 class="text-indigo-400">Technologies</h2>
                 <p class="py-1"><%= project.technologies %></p>
 
-                <h2 class="text-blue-400">Images</h2>
+                <h2 class="text-indigo-400">Images</h2>
                 <!-- Render images -->
                 <% project.images.forEach(function(img, idx) { %>
                     <img src="<%= img %>" class="rounded-md object-left object-contain max-h-80 w-full">
