Changed text CSS to be easily configurable from tailwind.config.js

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,14 +7,14 @@
     <body class="">
         <div class="flex flex-col  justify-center space-y-20">
             <div class="m-16 flex flex-col items-center">
-                <h1 class="text-indigo-400">Welcome to my site!</h1>
-                <p>I'm Sam. I'm a senior studying Computer Science at Worcester Polytechnic Institute.</p>
+                <h1 class="text-header">Welcome to my site!</h1>
+                <p class="text-primary">I'm Sam. I'm a senior studying Computer Science at Worcester Polytechnic Institute.</p>
             </div>
             <!-- Projects -->
             <div class="flex flex-col items-center space-y-6">
                 <div class="flex flex-col items-center">
-                    <h1 class="text-indigo-400">Projects</h1>
-                    <p>Here are some projects that I've worked on in the past. Check them out!</p>
+                    <h1 class="text-header">Projects</h1>
+                    <p class="text-primary">Here are some projects that I've worked on in the past. Check them out!</p>
                 </div>
 
                 <div class="flex flex-row justify-center space-x-20 w-4/5" >
