--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -7,8 +7,8 @@
     <body>
         <div class="flex flex-col justify-center space-y-20">
             <div class="m-16 flex flex-col items-center">
-                <h1 class="text-blue-400">404 Error - Not Found</h1>
-                <p>Oops, couldn't find that page. <a href="/" class="text-blue-500">Click here to go back.</a></p>
+                <h1 class="text-header">404 Error - Not Found</h1>
+                <p>Oops, couldn't find that page. <a href="/" class="text-primary">Click here to go back.</a></p>
             </div>
         </div>
     </body>
