--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -7,9 +7,9 @@
     <body>
         <div class="flex flex-col  justify-center space-y-20 ">
             <div class="m-16 flex flex-col items-center space-y-2">
-                <h1 class="text-blue-400">Uh oh!</h1>
+                <h1 class="text-header">Uh oh!</h1>
                 <p>Something went wrong rendering that page... Sorry about that!</p>
-                <p><a href="/" class="text-blue-500">Click here to go back to the home page.</a></p>
+                <p><a href="/" class="text-primary">Click here to go back to the home page.</a></p>
             </div>
         </div>
     </body>
