--- a/views/pages/project_home.ejs
+++ b/views/pages/project_home.ejs
@@ -7,8 +7,8 @@
     <body>
         <div class="flex flex-col  justify-center space-y-20 ">
             <div class="m-16 flex flex-col items-center">
-                <h1 class="text-indigo-400">All Projects</h1>
-                <p class="text-indigo-400">
+                <h1 class="text-header">All Projects</h1>
+                <p class="text-primary">
                     Here is a list of some projects I've done.
                 </p>
                 <div id="app">
