Added more info text to index

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,10 +5,19 @@
         <%- include('../partials/head.ejs') %>
     </head>
     <body class="">
-        <div class="flex flex-col  justify-center space-y-20">
+        <div class="flex flex-col  justify-center space-y-6">
             <div class="m-16 flex flex-col items-center">
                 <h1 class="text-header">Welcome to my site!</h1>
-                <p class="text-primary">I'm Sam. I'm a senior studying Computer Science at Worcester Polytechnic Institute.</p>
+                <h3 class="text-primary text-lg">I'm Sam. I'm a senior studying Computer Science at Worcester Polytechnic Institute.</h3>
+                <div class="flex flex-col items-start my-4 text-primary">
+                    <p>I built this website as part of the Digitalocean/DEV hackathon to improve my
+                        web development skills and create a portfolio to show off some of my project work. Take a look around!
+                    </p>
+                    <p>
+                        If you're interested, go check out my blog post that goes into more detail about the process of creating this site. You can find that <a href="https://dev.to/sdmoran/personal-website-on-digitalocean-app-platform-1ea0" class="text-blue-500">here.</a>
+                    </p>
+                </div>
+               
             </div>
             <!-- Projects -->
             <div class="flex flex-col items-center space-y-6">
