--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,15 +3,15 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="/files/style.css">
 
-<div class="bg-gradient-to-r from-purple-400 to-white p-5 text-white">
+<div class="bg-purple-400 p-5 text-white shadow-md">
     <nav class="flex justify-between">
         <ul class="flex flex-row">
-            <li class="pr-5"><a href="/">Home</a></li>
-            <li class="pr-5"><a href="/projects/all">Projects</a></li>
-            <li class="pr-5"><a href="https://github.com/sdmoran">GitHub</a></li>
-            <li class="pr-5"><a href="https://www.linkedin.com/in/sdmoran">Linkedin</a></li>
-            <li class="pr-5"><a href="/files/resume.pdf">Résumé</a></li>
-            <li class="pr-5"><a>Contact</a></li>
+            <li class="pr-5 font-semibold"><a href="/">Home</a></li>
+            <li class="pr-5 font-semibold"><a href="/projects/all">Projects</a></li>
+            <li class="pr-5 font-semibold"><a href="https://github.com/sdmoran">GitHub</a></li>
+            <li class="pr-5 font-semibold"><a href="https://www.linkedin.com/in/sdmoran">Linkedin</a></li>
+            <li class="pr-5 font-semibold"><a href="/files/resume.pdf">Résumé</a></li>
+            <li class="pr-5 font-semibold"><a href="mailto:sdhmoran@gmail.com">Contact</a></li>
         </ul>
     </nav>
 </div>
