--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,11 +1,13 @@
+<!-- Make reactive design work on mobile -->
+<meta name="viewport" content="width=device-width, initial-scale=0.5">
 <!-- Tailwind CSS -->
 <link rel="stylesheet" href="/files/tailwind.css">
 <!-- Custom CSS -->
 <link rel="stylesheet" href="/files/style.css">
 
 <div class="bg-purple-400 p-5 text-white shadow-md">
-    <nav class="flex justify-between">
-        <ul class="flex flex-row">
+    <nav class="flex justify-center md:justify-between">
+        <ul class="flex sm:flex-row flex-col">
             <li class="pr-5 font-semibold"><a href="/">Home</a></li>
             <li class="pr-5 font-semibold"><a href="/projects/all">Projects</a></li>
             <li class="pr-5 font-semibold"><a href="https://github.com/sdmoran">GitHub</a></li>
