--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,10 +22,10 @@
                     <h1 class="text-header">Projects</h1>
                     <p class="text-primary">Here are some projects that I've worked on in the past. Check them out!</p>
                 </div>
-                <div class="flex justify-center lg:flex-row lg:space-x-20 lg:space-y-0 sm:flex-col sm:space-y-20 sm:space-x-0 w-4/5" >
+                <div class="flex justify-center md:flex-row md:space-x-20 md:space-y-0 flex-col space-y-20 space-x-0 w-4/5" >
                     <% for(let i = 0; i < 3; i++) { %>
                         <% project = projects[i] %>
-                        <div class="flex flex-col rounded-lg bg-gradient-to-l hover:from-pink-400 hover:to-amber-300 from-blue-400 to-green-400 border-b-2 border-red-600 shadow-kg mousepoint" onclick="location.href='/projects/<%= project.name %>'">
+                        <div class="flex flex-col rounded-lg bg-gradient-to-l hover:from-pink-400 hover:to-amber-300 from-blue-400 to-green-400 border-b-2 border-red-600 shadow-lg mousepoint" onclick="location.href='/projects/<%= project.name %>'">
                             <a href="/projects/<%= project.name %>" class="flex">
                                 <% image = project.images[0] ? project.images[0] : "https://s3.us-east-2.amazonaws.com/smoran.dev-media/images/placeholder.png" %>
                                 <img alt="Placeholder" class="rounded-md mx-auto object-fit max-h-96" src="<%= image %>">
